--- a/JS-HomeTask-5/package.json
+++ b/JS-HomeTask-5/package.json
@@ -5,7 +5,6 @@
   "main": "./src/view.js",
   "scripts": {
     "start": "webpack-dev-server --open --mode production"
-    
   },
   "author": "",
   "license": "ISC",
@@ -16,15 +15,17 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "loader": "^2.1.1",
     "style-loader": "^1.0.0",
+    "terser-webpack-plugin": "^1.4.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-remove-console": "^6.9.4"
+    "babel-loader": "^8.0.6"
   }
 }
